[tool.poetry]
name = "convertedor_de_moeda"
version = "1.0"
description = "Verifica todas as moedas existentes, e converte qual o usuário escolher."
authors = ["Victor Motta <victor.mottag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
bs4 = "^0.0.1"
Babel = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
